# nibade

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: config.py  db.py  deps.py  init_db.py  main.py
app/api/: admin.py  auth.py  webhook.py
app/models/: user.py
app/scripts/: add_admin.py
nibades-alert/: .dockerignore  .gitignore  Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
